# Programming-Note

./: .gitignore  .gitmodules  README.md  swift_note.swift  新建文本文档 (2).txt  新建文本文档.txt
.cache/clangd/index/: Array.cpp.D130129843678F26.idx  Array.hpp.85318883F8D56393.idx  BinaryTree.cpp.26AB9775AE0D3C47.idx  BinaryTreeNode.hpp.ECF34935BD8F4E28.idx  LinearList.hpp.824FABC2808B100E.idx  LinkedList.cpp.97A822196BADB6AE.idx  LinkedList.hpp.EEE8D84B67395A11.idx  Node.hpp.2CDE5E2A56DF1035.idx
C++/: NetWorking.txt  Notes.txt  Template.md
DataStructure/: CMakeLists.txt  CmakeCommon.cmake  Note.txt  README.md
DataStructure/Algorithm/QuickSort/: QuickSort.hpp
DataStructure/Dictionary/: CMakeLists.txt  Dictionary.hpp  test.cpp
DataStructure/LinearList/: CMakeLists.txt  LinearList.hpp  Practice.md
DataStructure/LinearList/Array/: Array.cpp  Array.hpp  CMakeLists.txt
DataStructure/LinearList/LinkedList/: CMakeLists.txt  LinkedList.cpp  LinkedList.hpp  Node.hpp
DataStructure/Matrix/: Matrix.hpp
DataStructure/SkipList/: CMakeLists.txt  CMakeSettings.json  Intro.md  SkipList.cpp  SkipList.h
DataStructure/SkipList/images/: Thumbs.db
DataStructure/Tree/: CMakeLists.txt
DataStructure/Tree/BinaryTree/: BinaryTree.cpp  BinaryTree.hpp  BinaryTreeNode.hpp  CMakeLists.txt  LinkedBinaryTree.hpp  main.cpp
DataStructure/Tree/Heap/: main.cpp  maxHeap.hpp
DataStructure/include/: Allocator.hpp
DesignPattern/: CMakeLists.txt  Notes.txt
DesignPattern/8_AbstractFactory/: CMakeLists.txt
DesignPattern/8_AbstractFactory/include/factory/: Factory.h  Item.h  Link.h  Page.h  Tray.h
DesignPattern/8_AbstractFactory/include/listfactory/: ListFactory.h  ListLink.h
DesignPattern/8_AbstractFactory/src/: main.cpp
DesignPattern/8_AbstractFactory/src/factory/: Item.cpp  Link.cpp  Page.cpp  Tray.cpp
DesignPattern/8_AbstractFactory/src/listfactory/: ListLink.cpp  listfactory.cpp
DesignPattern/Memento Pattern/: CMakeLists.txt  CMakeSettings.json  MementoPattern.cpp  MementoPattern.h  README.md  main.cpp
DesignPattern/ReactorPattern/: CMakeLists.txt  ReactorPattern.cpp  ReactorPattern.h
DesignPattern/Singleton Design/: README.md
DesignPattern/Singleton Design/Extern Global/: CMakeLists.txt
DesignPattern/Singleton Design/Extern Global/include/: MySingleton.h  UseSingleton.h
DesignPattern/Singleton Design/Extern Global/src/: MySingleton.cpp  UseSingleton.cpp  main.cpp
DesignPattern/StatePattern/: CMakeLists.txt  README.md  StatePattern.cpp  StatePattern.h  main.cpp
Doxygen/: Notes.md
Front-End/: CSS.md  HTML.md  main.html  test.js
Kotlin/: Note.txt
Languages/ASM/: Note.txt
Languages/C#/: Notes.txt
Languages/C++/: GuideLine.md  Notes.txt
Languages/C++与Python互调/: 使用pybind11.txt
Languages/C++与Python互调/SampleProject/: CMakeLists.txt  CMakePresets.json  CMakePythonTest.cpp  CMakePythonTest.h  MyModule1.cpp  main.cpp
Languages/Front-End/: CSS.md  JS.txt  test.js
Languages/Kotlin/: Note.txt
Languages/Markdown/: test.html  test.md
Languages/Powershell/: test.ps1  test2.ps1
Languages/Python/: Note.ipynb
Languages/Rust/: note.txt
Languages/SQL/: Notes.txt
Languages/Swift/: swift_note.swift
LearnCTheHardWay/: Notes.txt  WindowsAPI.txt
Libraries/OpenCL/: Note.txt
Libraries/OpenGL/OpenGL/: CMakeLists.txt  Note.md  OpenGL.sln  OpenGL.vcxproj
Libraries/OpenGL/OpenGL/src/: IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
Libraries/OpenGL/OpenGL/x64/Debug/: vc142.ib_pdb_index  vc142_ib_1.idb  vc142_ib_10.idb  vc142_ib_4.idb  vc142_ib_5.idb  vc142_ib_8.idb  vc142_ib_9.idb
Libraries/OpenGL/OpenGL/x64/Debug/OpenGL.tlog/: OpenGL.lastbuildstate  link.read.1.tlog  link.write.1.tlog
Libraries/OpenGL/OpenGL/x64/Release/: OpenGL.iobj
Libraries/OpenGL/OpenGL/x64/Release/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  OpenGL.lastbuildstate  OpenGL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Libraries/Opencv/: Notes.txt
Libraries/Opencv/Practice/: BasicDrawing.cpp
Libraries/ProtocolBuffer/: note.txt
Libraries/cef/: note.txt
Libraries/qt/: notes.txt
Libraries/unreal/: note.txt  notes.md
Markdown/: test.md
OS/: Unix.txt  Windows.txt
OS/奇技淫巧WinRT/: 注册Win11右键菜单.md
OpenCL/: Note.txt
OpenGL/OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL/OpenGL/Shaders/: FragmentShader.txt  VertexShader.txt  VertexShader.vert
OpenGL/OpenGL/notes/: Note.md
OpenGL/OpenGL/src/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  VertexArray.h  main.cpp
OpenGL/OpenGL/texture/: Thumbs.db
OpenGL/OpenGL/x64/Debug/: OpenGL.ilk  vc142.idb  vc142_ib_11.idb  vc142_ib_12.idb  vc142_ib_2.idb  vc142_ib_3.idb  vc142_ib_6.idb  vc142_ib_7.idb
OpenGL/OpenGL/x64/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
OpenGL/OpenGL/x64/Release/: OpenGL.iobj  OpenGL.ipdb
Opencv/: Notes.txt
Powershell/: note.md  test.ps1  test.txt
Python/: Note.ipynb
Tools/CMake/: Notes.md
git/: Note.txt
(+8 files in other folders)
